# interpreter

./: CMakeLists.txt  ast.hpp  code.txt  grammer.md  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.hpp
inc/: ast.hpp  frwrd_decl_for_ast.hpp  modifiers.hpp  parser.hpp  scope.hpp  semantic_analyzer.hpp  semantic_visitor.hpp  symbol_table.hpp  token.hpp  types.hpp  vis_analyzer.hpp  vis_print.hpp  visitor.hpp
src/: lexer.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp  semantic_visitor.cpp  types.cpp  vis_print.cpp  visitor.cpp
